Automatically backed up by Learn

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,24 @@
 <h1>Articles</h1>
 
 <form method = "POST" action = "/articles">
+  <ul>
+    <li>
+      <label> for = "title">Title</label>
+    
+
+
+
+
+
+
+    </li>
+    
+
+
+
+
+  </ul>
+  
 
 
 
