--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -3,28 +3,14 @@
 <form method = "POST" action = "/articles">
   <ul>
     <li>
-      <label> for = "title">Title</label>
-
-
-
-
-
-
-
+      <label for ="title">Title</label>
+      <input id = "title" type = "text" name = "title" />
     </li>
-
-
-
-
-
+    <li>
+      <label for ="content">Content</label>
+      <textarea id="content" type="text" name="content">
+      </textarea>
+    </li>
   </ul>
-
-
-
-
-
-
-
-
-
+  <input type = "submit" value = "submit" />
 </form>
